2008-03-02 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: fixed bug in IsNT, LogicLib-isation of
	  AddToPath and RemoveFromPath

2008-03-01 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: reverted MULTIUSER page since it didn't
	  work correctly, added debugging support if -DSDCC.DEBUG command line
	  option is defined

2008-02-28 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: cosmetic changes

2008-02-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (fillGaps): fixed bug 1839671
	* doc/sdccman.lyx: fixed unmeant removal of spaces

2008-02-27 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: corrected installation directory for
	  current user installation mode
	* doc/README.txt: added Philipp Klaus Krause to the developers list

2008-02-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genUnpackBits): don't generate ifxJump, instead return
	  ifx condition
	  (genNearPointerGet, genPagedPointerGet, genFarPointerGet,
	  genCodePointerGet, genGenPointerGet): cleanup aop before generating
	    ifxJump to fix bug 1838000
	* src/SDCCsymt.c (aggregateToPointer): fix problem for xstack
	* support/regression/tests/bug1838000.c: new, added
	* device/include/mcs51/cc1110.h: new, added, thanks to Pravin Angolkar

2008-02-26 Borut Razem <borut.razem AT siol.net>

	* src/SDCCast.c, doc/sdccman.lyx: fixed RFE #1901171: inerger promotion
	  of casted varargs
	* support/scripts/sdcc.nsi: added MULTIUSER page,
	  NSIS upgraded to version 2.35

2008-02-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (isSpiltOnStack): fixed bug 1565152
	* support/regression/tests/bug1565152.c: new, added

2008-02-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genPagedPointerSet): fixed bug 1670148
	* support/regression/ports/mcs51-xstack-auto/spec.mk: added expf.c
	* support/regression/tests/bug1670148.c: new, added
